# id-cards-filler-ghost

./: .gitignore  pyproject.toml
ids_filler/: __init__.py  __main__.py
ids_filler/config/: config.py
ids_filler/images/: image_modifier.py
